force-app/main/default/objects/StarTrack_Weight__c/StarTrack_Weight__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting will store all the case weight values corresponding to the case field values.</description>
    <label>StarTrack Weight</label>
</CustomObject>