force-app/main/default/objects/StarTrack_Weight__c/fields/CaseUpdate_NewEmailRec__c.field-meta.xml
<CustomField>
    <fullName>CaseUpdate_NewEmailRec__c</fullName>
    <label>Case Update - New Email Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>