force-app/main/default/objects/StarTrack_Weight__c/fields/Priority_Critical__c.field-meta.xml
<CustomField>
    <fullName>Priority_Critical__c</fullName>
    <label>Priority - Critical</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>