force-app/main/default/objects/StarTrack_Weight__c/fields/Priority_Normal__c.field-meta.xml
<CustomField>
    <fullName>Priority_Normal__c</fullName>
    <label>Priority - Normal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>